src/test/ui/regions/regions-variance-invariant-use-contravariant.stderr
error[E0623]: lifetime mismatch
  --> $DIR/regions-variance-invariant-use-contravariant.rs:32:32
   |
LL | fn use_<'short,'long>(c: Invariant<'long>,
   |                          ----------------
LL |                       s: &'short isize,
   |                          ------------- these two types are declared with different lifetimes...
...
LL |     let _: Invariant<'short> = c; //~ ERROR E0623
   |                                ^ ...but data from `s` flows into `c` here

error: aborting due to previous error

For more information about this error, try `rustc --explain E0623`.
